# mini-mask-git

./: .gitignore  README.md  extract_latents.py  extract_latents_imagenet.sh  pyproject.toml  train.py
config/: config.yaml
config/data/: dummy.yaml  imagenet.vq_vae_f16_1024.yaml  imagenet.vq_vae_f16_1024_128px.yaml  imagenet.vq_vae_f8_16384.yaml
config/loggers/: wandb.yaml
config/models/transformer/: base.yaml  dev.yaml  large.yaml
config/models/unet/: base.attn.yaml  base.yaml
mini_mask_git/: data.py  modules.py  utils.py  vqgan.py
mini_mask_git/lightning/: callbacks.py  cli.py  data_modules.py  models.py
mini_mask_gpt/: data.py
